/**
 * Tests for ArchitectAgent prompts
 * Generated by polka.codes
 */

import { describe, expect, test } from 'bun:test'
import { getSystemPrompt, getUserPrompt } from './prompts'

describe('ArchitectAgent prompts', () => {
  test('getSystemPrompt should return non-empty string', () => {
    const prompt = getSystemPrompt()
    expect(typeof prompt).toBe('string')
    expect(prompt.length).toBeGreaterThan(0)
    expect(prompt).toMatchSnapshot()
  })

  test('getUserPrompt should include task and optional context', () => {
    const task = 'Implement user authentication'
    const context = 'Using JWT tokens'

    const promptWithContext = getUserPrompt(task, context)
    expect(promptWithContext).toContain(task)
    expect(promptWithContext).toContain(context)
    expect(promptWithContext).toMatchSnapshot()

    const promptWithoutContext = getUserPrompt(task)
    expect(promptWithoutContext).toContain(task)
    expect(promptWithoutContext).not.toContain('Additional Context')
    expect(promptWithoutContext).toMatchSnapshot()
  })
})
